syntax = "proto3";

package api.note_v1;

option go_package = "github.com/Journeyman150/note-service-api/pkg/note_v1";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service NoteV1 {
    rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse) {
        option (google.api.http) = {
            post: "/note/v1/create"
            body: "*"
        };
    }
    rpc GetNote (GetNoteRequest) returns (GetNoteResponse) {
        option (google.api.http) = {
            get: "/note/v1/get/{id}"
        };
    }
    rpc GetListNote (google.protobuf.Empty) returns (GetListNoteResponse) {
        option (google.api.http) = {
            get: "/note/v1/get-list"
        };
    }
    rpc Update (UpdateNoteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/note/v1/update"
            body: "*"
        };
    }
    rpc DeleteNote (DeleteNoteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/note/v1/delete"
            body: "*"
        };
    }
}

message NoteInfo {
    string title = 1 [(validate.rules).string = {min_len: 3, max_len: 100}];
    string text = 2 [(validate.rules).string = {min_len: 10, max_len: 10000}];
    string author = 3 [(validate.rules).string = {min_len: 2, max_len: 100}];
    string email = 4 [(validate.rules).string = {email: true}];
}

message CreateNoteRequest {
    NoteInfo noteInfo = 1;
}

message CreateNoteResponse {
    int64 id = 1;
}

message GetNoteRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
}

message GetNoteResponse {
    int64 id = 1;
    NoteInfo noteInfo = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message GetListNoteResponse {
    repeated GetNoteResponse notes = 1;
}

message UpdateNoteRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
    google.protobuf.StringValue title = 2 [(validate.rules).string = {min_len: 3, max_len: 100}];
    google.protobuf.StringValue text = 3 [(validate.rules).string = {min_len: 10, max_len: 10000}];
    google.protobuf.StringValue author = 4 [(validate.rules).string = {min_len: 2, max_len: 100}];
    google.protobuf.StringValue email = 5 [(validate.rules).string = {email: true}];
}

message DeleteNoteRequest {
    int64 id = 1 [(validate.rules).int64.gte = 1];
}